<resources>
    <string name="app_name">org_adm_sistema</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Organizacion Administracion De Sistemas</string>
    <string name="nav_header_subtitle">mariopolonia0@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_Cliente">Cliente</string>
    <string name="menu_Local">Local</string>
    <string name="menu_Ingreso">Ingreso</string>
    <string name="nullimagen">null</string>

    <!-- registro Clientes -->
    <string name="TituloFramerEditarCliente">Editar Cliente</string>
    <string name="textNombre">Nombre</string>
    <string name="textApellido">Apellido</string>
    <string name="textDirrecion">Dirrecion</string>
    <string name="textNumeroTelefono">Numero Telefono</string>
    <string name="textReferencia">Referencia</string>
    <string name="todo">TODO</string>

    <!--dialog-->
    <string name="titulo">ALERTA</string>
    <string name="mensajefaltacampo">Hay Campo Vacio Y Estan Marcado En Rojo</string>
    <string name="mensajeguardar">Desea Guardo El Cliente</string>
    <string name="mensajemodificar">Desea Modifico El Cliente </string>
    <string name="mensajeeliminar">Desea Eliminar El Cliente </string>
    <string name="mensajeagregarclientelocal">Desea Guardar El Local Sin Cliente</string>
    <string name="DeseaGuardarElLocal">Desea Guardar El Local </string>

    <!--vista cliente-->
    <string name="nombrevistacliente">Nombre</string>
    <string name="Dirrecionvistacliente">Dirrecion</string>
    <string name="NumeroTelefonovistacliente">Numero Telefono</string>

    <!--vista local-->
    <string name="nombrevistalocal">Nombre</string>
    <string name="MontovistaLocal">Precio</string>
    <string name="fechapago">Fecha Registro</string>
    <string name="tipopago">Tipo Pago</string>

    <!--Cobrar facturaas -->
    <string name="tituloventacobrardfactura">Cobrar Factura</string>
    <string name="TipoLocalvista">Tipo</string>
    <string name="fecharegistroLocal">Fecha Registro</string>
    <string name="clienteLocal">Inquilino</string>

    <!--Editar local -->
    <string name="TituloFramerEditarLocal">Editar Local</string>
    <string name="textNombreLocal">Nombre</string>
    <string name="textMontoRentaLocal">Monto Renta</string>
    <string name="textTipoLocal">Tipo Local</string>
    <string name="textFechaRegistroLocal">Fecha Registro</string>
    <string name="textselecionarClienteLocal">Seleccionar Cliente</string>
    <string name="todoLocal">TODO</string>

    <!-- registro Factura -->
    <string name="TituloFramerEditarIngreso">Cobrar Ingreso</string>
    <string name="Cliente">Cliente</string>
    <string name="FechaRentacumplida">Fecha De Renta cumplida</string>
    <string name="FechaPagoRealizado">Fecha De Pago Realizado</string>
    <string name="TipoDePago">Tipo De Pago</string>
    <string name="MontoTotal">Monto Total</string>

    <!-- registro AdateIngreso -->
    <string name="clienteIdAdateIngreso">Cliente</string>
    <string name="FechacumplidaAdateIngreso">Mes Cumplido </string>
    <string name="montototalAdateIngreso">Monto Total</string>

</resources>